tdf#88624 set DocumentBaseURL when saving report

regression from 1d38cb365543924f9c50014e6b2227e77de1d0c9

Change-Id: Ia8cfe47b9d92889b3724f394db5090a59e69dd48